Fix promo spacing, text wrapping. Closes #822. Closes #821

--- a/less/promo.less
+++ b/less/promo.less
@@ -142,10 +142,6 @@ a:focus, a:hover {
     }
     .open-up {
         margin-top: 30px;
-
-        @media only screen and (min-width: 768px) {
-            margin-top: 120px;
-        }
     }
 }
 
